base/dotnet-helloworld/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dotnet-helloworld
  name: dotnet-helloworld
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
    container.apparmor.security.beta.kubernetes.io/dotnet-helloworld: runtime/default
spec:
  selector:
    matchLabels:
      app: dotnet-helloworld
  template:
    metadata:
      labels:
        app: dotnet-helloworld
      name: dotnet-helloworld
    spec:
      containers:
        - name: dotnet-helloworld
          image: dotnet-helloworld-image
          ports:
            - containerPort: hello
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 250m
              memory: 500Mi
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: regcred
      securityContext:
        runAsUser: 1001
        runAsGroup: 9000
