base/dotnet-helloworld/resources/ingress-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-helloworld
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #external-dns.alpha.kubernetes.io/target: 10.128.0.106 
    # RBADAWI: if you decide to annotate to avoid having traffic route to multiple clusters based especially for an application with multiple ingress 
spec:
  #ingressClassName: nginx
  tls:
    - hosts: []
      secretName: dotnet-helloworld-tls
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - backend:
              service:
                name: dotnet-helloworld
                port:
                  number: 8080
            path: /
            pathType: Prefix
